# fast_simulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
env-hooks/: 60.fast_simulator.bash  60.fast_simulator.sh.em
include/fast_simulator/: Amigo.h  BodyPart.h  Hero.h  Kinect.h  ModelParser.h  Robot.h  Sergio.h
src/: Amigo.cpp  BodyPart.cpp  Hero.cpp  Kinect.cpp  ModelParser.cpp  Object.cpp  Robot.cpp  Sergio.cpp  SimulatorROS.cpp
