<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_simulator</name>
  <version>0.0.0</version>
  <description>The fast_simulator package</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ed</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rgbd</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>tue_config</depend>
  <depend>tue_filesystem</depend>
  <depend>tue_manipulation</depend>
  <depend>tue_msgs</depend>
  <depend>virtual_cam</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ipython</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
